syntax = "proto3";
option go_package="/pb";

service AccountService {
    // 查
    rpc GetAccountList(PageinRequest) returns (AccountListResponse); // 支持通过页码和页面大小查询账户列表
    rpc GetAccountByName(NameRequest) returns (AccountResponse);
    rpc GetAccountByPhoneNumber(PhoneNumberRequest) returns (AccountResponse);
    rpc GetAccountById(IdRequest) returns (AccountResponse);

    //  增
    rpc AddAccount(AddAccountRequest) returns (AccountResponse);

    // 改
    rpc UpdateAccount(UpdateAccountRequest) returns (AccountResponse);

    // 检查用户名和密码
    rpc CheckNamePassword(CheckAccountRequest) returns (CheckAccountResponse);

}

message CheckAccountRequest {
    string nickname=1;
    string password=2;
    string hashed_password=3;
    uint32 id=4;

}

message CheckAccountResponse {
    bool check=1;
}

message UpdateAccountRequest {
    uint32 id=1;
    string phone_number=2;
    string password=3;
    string nickname=4;
    uint32 gender=5;
    uint32 role=6;
}

message IdRequest {
    uint32 id=1;
}

message AddAccountRequest {
    string phone_number=1;
    string password=2;
    string nickname=3;
    uint32 gender=4;
    uint32 role=5;
}

message PageinRequest {
    uint32 pageNumber=1;    // 展示第几页的数据
    uint32 pageSize=2;  // 展示多少数据
}

message NameRequest {
    string name=1;
}

message PhoneNumberRequest {
    string phone_number=1;
}

message AccountResponse {
    uint32 id=1;
    string phone_number=2;
    string password=3;
    string nickname=4;
    uint32 gender=5;
    uint32 role=6;
}

message AccountListResponse{
    int32 total=1;
    repeated AccountResponse accountList=2;
}